# dictlist2

./: .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint-flake8.yml  lint.yml  new-release.yml  pytest.yml  python-publish.yml  release.yml
doc/: example1.py
src/dictlist/: __init__.py  _version.py
src/dictlist2/: __init__.py  _version.py
tests/: test_aggregate.py  test_distinct.py  test_filter.py  test_gen_filter.py  test_group_by.py  test_join.py  test_left_join.py  test_sort.py  test_unique.py
